Fix scrolling by dragging scrollbar not working properly

--- a/src/dibgram/ui/scroll/scrollbar.scss
+++ b/src/dibgram/ui/scroll/scrollbar.scss
@@ -11,7 +11,6 @@
             display: none;  /* Safari and Chrome */
         }
         margin: 0 !important;
-        scroll-behavior: smooth;
     }
 
     .track-horizontal, // Horizontal scrollbar should be hidden
